--- a/eiffelTower.html
+++ b/eiffelTower.html
@@ -3,7 +3,7 @@
     
     <head>
         <meta charset="utf-8">
-        <title>GEO MAGS - Eiffel Tower</title>
+        <title>Geomags&#8482; - Eiffel Tower</title>
         <meta name="geomags-eiffel-tower" content="rebuilding the eiffel tower with GEO MAGS">
         <link rel="stylesheet" href="main.css">
     </head>
