--- a/eiffelTower.html
+++ b/eiffelTower.html
@@ -4,7 +4,7 @@
     <head>
         <meta charset="utf-8">
         <title>Geomags&#8482; - Eiffel Tower</title>
-        <meta name="geomags-eiffel-tower" content="rebuilding the eiffel tower with GEO MAGS">
+        <meta name="geomags-eiffel-tower" content="rebuilding the eiffel tower with Geomags">
         <link rel="stylesheet" href="main.css">
     </head>
     <body>
